tests/ui/proc-macro/quote/does-not-have-iter.stderr
error[E0308]: mismatched types
  --> $DIR/does-not-have-iter.rs:8:5
   |
LL |     quote!($(a b)*);
   |     ^^^^^^^^^^^^^^^
   |     |
   |     expected `HasIterator`, found `ThereIsNoIteratorInRepetition`
   |     expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
